@@ -286,6 +286,8 @@ export("ref<-")
 export("val_lab<-")
 export("var_lab<-")
 export(..)
+export(..f)
+export(..p)
 export(.add_columns)
 export(.add_rows)
 export(.apply_labels)
@@ -491,6 +493,8 @@ export(max_if)
 export(max_row)
 export(max_row_if)
 export(mdset)
+export(mdset_f)
+export(mdset_p)
 export(mean_col)
 export(mean_col_if)
 export(mean_if)
@@ -511,6 +515,8 @@ export(mis_val)
 export(modify)
 export(modify_if)
 export(mrset)
+export(mrset_f)
+export(mrset_p)
 export(n2l)
 export(n_diff)
 export(n_intersect)
