@@ -63,7 +63,8 @@ data.frame \code{data} and return value of the evaluated expression. It works
 similar to \code{\link[base]{with}} in base R but make available 
 full-featured \code{\%to\%} and \code{.N} in the expressions. See 
 \link{vars}. Function \code{use_labels} is shortcut for \code{calculate} with
-argument \code{use_labels} set to \code{TRUE}.}}
+argument \code{use_labels} set to \code{TRUE}. When \code{use_labels} is TRUE
+there is a special shortcut for entire data.frame - \code{..data}.}}
 \item{{\code{do_if}}{ modifies only rows for which \code{cond} equals to
 TRUE. Other rows remain unchanged. Newly created variables also will have
 values only in rows for which \code{cond} have TRUE. There will be NA's in
